[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/textures/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://assets/sound-effects/gate/gate-close.ogg" type="AudioStream" id=2]
[ext_resource path="res://actors/interactables/gate/base-nodes/triggered-platform.gd" type="Script" id=3]
[ext_resource path="res://assets/sound-effects/gate/gate-open.ogg" type="AudioStream" id=4]












[sub_resource type="Animation" id=1]
resource_name = "Activate"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -4, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Deactivate"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -4 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 1.5 )

[node name="TriggeredPlatform" type="StaticBody2D" groups=[
"blocks",
]]
z_index = -3
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Activate = SubResource( 1 )
anims/Deactivate = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3
region_enabled = true
region_rect = Rect2( 0, 176, 64, 16 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -6.5 )
shape = SubResource( 3 )

[node name="OpenGate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0
max_distance = 1500.0
attenuation = 5.46416
bus = "REVERB"

[node name="CloseGate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -4.0
max_distance = 1500.0
attenuation = 5.46416
bus = "REVERB"

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.01
